feat: add segment-based evaluation

--- a/workflow/envs/env.yaml
+++ b/workflow/envs/env.yaml
@@ -8,6 +8,7 @@ dependencies:
   - demesdraw=0.4.1
   - msprime=1.3.4
   - numpy=2.3.5
+  - pandas=2.3.3
   - pip=25.3
   - pyranges=0.1.4
   - python=3.11.14
