--- a/config/slurm/musica/config.yaml
+++ b/config/slurm/musica/config.yaml
@@ -1,7 +1,6 @@
 cluster:
   mkdir -p logs_slurm/{rule} &&
   sbatch
-    --nodes={resources.nodes}
     --ntasks={resources.ntasks}
     --cpus-per-task={resources.cpus}
     --mem={resources.mem_gb}G
@@ -9,14 +8,15 @@ cluster:
     --job-name=smk-{rule}-{wildcards}
     --output=logs_slurm/{rule}/{rule}-{wildcards}-%j
     --partition={resources.partition}
+    --constraint=asc-vanilla
     --no-requeue
 default-resources:
-    - time=360
+    - time=720
     - nodes=1
     - ntasks=1
     - mem_gb=4
     - cpus=1
-    - partition=basic,gpu,himem,himemgpu
+    - partition=zen4_0768
 restart-times: 3
 max-jobs-per-second: 10
 max-status-checks-per-second: 1
